--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "mysql2": "^3.14.3",
     "peer": "^1.0.2",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
