--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "peerjs": "^1.5.5",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
 }
